# otto

./: .drone.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  coverage.lcov  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: docker.yml
assets/: convert.sh
otto/: __init__.py  app.py  config.py  constants.py  discord.py  errors.py  handlers.py  job.py  stream_posts.py  types.py
otto/lib/: check_posts.py  game_thread.py  mod_actions.py  nfl_client.py  screenshot.py  sendbird_client.py  twitter_client.py  update_downvote.py  update_sidebar_image.py  update_sidebar_score.py  weather_client.py
otto/models/: __init__.py  game.py  record.py  team.py  weather.py
otto/utils/: __init__.py  convert.py  css.py  image.py  timer.py
tests/: app_test.py  config_test.py  conftest.py  job_test.py  mock.py
tests/data/: generate.py  get_game.json  get_game_details.json  get_scores.json  get_standings.json  get_stat_leader.json
tests/factories/: game.py  team.py  weather.py
tests/fixtures/: weather_client.py
tests/integration/lib/: weather_client_test.py
tests/integration/lib/cassettes/weather_client_test/: test_get_weather_at_stadiums[25.9579713--80.2410544].yaml  test_get_weather_at_stadiums[27.97783--82.50339].yaml  test_get_weather_at_stadiums[37.33479--121.88814].yaml  (+29 more)
tests/lib/: check_post_test.py  game_thread_test.py  twitter_client_test.py
tests/unit/: config_test.py  discord_test.py
tests/unit/lib/: check_post_test.py  game_thread_test.py  weather_client_test.py
tests/unit/utils/: image_test.py
tests/utils/: convert_test.py
(+32 files in other folders)
